aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__or__tests__or_lit_reg.snap
---
source: aya-assembly/src/parser/instructions/or.rs
expression: result
---
Instruction(
    OrLitReg(
        Register(
            ByteOffset {
                start: 3,
                end: 5,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 8,
                end: 12,
            },
        ),
    ),
)
