aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__or__tests__or_lit_reg_expr.snap
---
source: aya-assembly/src/parser/instructions/or.rs
expression: result
---
Instruction(
    OrLitReg(
        Register(
            ByteOffset {
                start: 3,
                end: 5,
            },
        ),
        BinaryOp {
            lhs: HexLiteral(
                ByteOffset {
                    start: 9,
                    end: 13,
                },
            ),
            operator: Add,
            rhs: Register(
                ByteOffset {
                    start: 16,
                    end: 18,
                },
            ),
        },
    ),
)
